[gd_scene load_steps=12 format=3 uid="uid://bv43e0jmlifoi"]

[ext_resource type="Script" path="res://General/ControlsOverworld/ShopMenu/ItemSelectionMenu/ItemSelectionMenu.gd" id="1_oghv3"]
[ext_resource type="Resource" path="res://SF1/Items/Usables/MedicalHerb.tres" id="2"]
[ext_resource type="Resource" path="res://SF1/Items/Weapons/ShortSword.tres" id="3"]
[ext_resource type="FontFile" uid="uid://dsvjkkfpt1rqd" path="res://Assets/SF1/ShiningForceMenuFont.tres" id="4"]
[ext_resource type="Resource" path="res://SF1/Items/Weapons/Spear.tres" id="5"]
[ext_resource type="Resource" path="res://SF1/Items/Weapons/WoodenStaff.tres" id="6"]
[ext_resource type="Resource" uid="uid://cbt5med0rrtjh" path="res://SF1/Items/Weapons/HandAxe.tres" id="7"]
[ext_resource type="Resource" path="res://SF1/Items/Weapons/WoodenArrow.tres" id="8"]
[ext_resource type="Resource" path="res://SF1/Items/Weapons/BronzeLance.tres" id="9"]
[ext_resource type="Texture2D" uid="uid://cjy1pwbnlhjbu" path="res://Assets/SF1/ShiningForceTextBackground.png" id="9_j34us"]
[ext_resource type="PackedScene" uid="uid://b451lgd0islao" path="res://General/ControlsSelectors/RedSelectionBorder/RedSelectionBorder.tscn" id="11_0udcv"]

[node name="ShopItemSelectionMenuNode" type="Node2D"]
script = ExtResource("1_oghv3")
item_list = Array[Resource]([ExtResource("2"), ExtResource("9"), ExtResource("7"), ExtResource("3"), ExtResource("5"), ExtResource("8"), ExtResource("6")])

[node name="ShopItemsStatNinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 32.0
offset_right = 288.0
offset_bottom = 36.0
grow_horizontal = 2
texture = ExtResource("9_j34us")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="ShopItemsStatNinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
metadata/_edit_lock_ = true

[node name="ItemInfoStatNinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 4.0
offset_top = 36.0
offset_right = 96.0
offset_bottom = 64.0
grow_horizontal = 2
texture = ExtResource("9_j34us")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
metadata/_edit_lock_ = true

[node name="ItemNameLabel" type="Label" parent="ItemInfoStatNinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 6.0
offset_right = 3.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4")
text = "Medical Herb"
metadata/_edit_lock_ = true

[node name="GoldLabel" type="Label" parent="ItemInfoStatNinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 15.0
offset_right = -7.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4")
text = "100"
horizontal_alignment = 2
metadata/_edit_lock_ = true

[node name="RedSelectionBorderRoot" parent="." instance=ExtResource("11_0udcv")]
position = Vector2(66, 6)
